argo/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterscope-frontend
spec:
  selector:
    app: clusterscope-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
