argo/frontend/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: clusterscope-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  gatewayClassName: aws-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: clusterscope-frontend-alb
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        options:
          gateway.k8s.aws/certificate-source: LoadBalancerConfiguration
      allowedRoutes:
        namespaces:
          from: Same
